--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -14,10 +14,13 @@
  		</div>
  	<% end %>
  	<% if @stock %>
- 		<div id="stock-lookup-results" class="well results-block">
+ 		<div id="stock-lookup-results" class="well results">
  			<strong>Symbol: </strong> <%= @stock.ticker %>
  			<strong>Name: </strong> <%= @stock.name %>
  			<strong>Price: </strong> <%= @stock.price %>
  		</div>
  	<% end %>
+ 	<div id="stock-lookup-errors">
+ 	 
+ 	</div>
  </div>
