Fix render tag to display spinner

--- a/app/views/stocks/_lookup.html.erb
+++ b/app/views/stocks/_lookup.html.erb
@@ -13,7 +13,7 @@
  			</div>
  		</div>
  	<% end %>
- 	<% render 'common/spinner' %>
+ 	<%= render 'common/spinner' %>
  	<% if @stock %>
  		<div id="stock-lookup-results" class="well results">
  			<strong>Symbol: </strong> <%= @stock.ticker %>
