--- a/app/views/common/_spinner.html.erb
+++ b/app/views/common/_spinner.html.erb
@@ -1,3 +1,3 @@
-<div id="spinner" class="row col-md-12 text-center spinner">
-	<i class="fa fa-spinner fa-spin fa-2x" aria-hidden="true"> Processing...</i>
+<div id="spinner" class="row col-md-12 text-center spinner" style="display: none;">
+  <i class="fa fa-spinner fa-spin fa-2x"></i> Processing...
 </div>
