--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,3 +1,13 @@
 .results {
 	display: inline-block;
 }
+
+.no-padding {
+	padding: 0;
+	padding-bottom: 10px;
+	margin-top: -5px;
+}
+
+.left-padding {
+	padding-left: 15px !important;
+}
